# forge-orchestrator

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  STANDARDS.md  forge_pipelines.db  install.sh  pyproject.toml  report_final.md  report_person_identity.md
.claude/: launch.json
.forge/: build-log.md  decisions.md  forge.toml  screenshot-report.md  session-handoff.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-autofix.yml
design/: dashboard.html  history.html  pipeline-view.html  script.js  settings.html  styles.css
docs/: gauntlet.md  keybindings.md
docs/design/: 3a_design.md  contract-builder.md  interactive-plan-editing-and-approval.md  pipeline-templates-design.md  smart-context-sharing-and-conventions.md
docs/plans/: 2026-02-27-forge-design.md  2026-02-27-forge-implementation.md  2026-02-28-forge-ui-design.md  2026-02-28-forge-ui-implementation.md  2026-02-28-forge-v2-design.md  2026-02-28-forge-v2-implementation.md  2026-02-28-forge-v3-implementation.md  2026-02-28-forge-v3-production-fixes-design.md  2026-03-01-forge-v4-implementation.md  2026-03-01-forge-v4-resilience-design.md  2026-03-01-forge-v5-implementation.md  2026-03-01-forge-v5-ux-polish-design.md  2026-03-01-merge-fix-design.md  2026-03-01-pipeline-branch-isolation-design.md  contract-builder-implementation-prompt.md  design-1a-build-test-gates.md  design-1b-token-cost-budget.md  feature-design-prompts.md
docs/superpowers/plans/: 2026-03-10-terminal-tui.md  2026-03-11-human-in-the-loop-pipeline.md  2026-03-11-tui-overhaul.md  2026-03-12-tui-layout-redesign.md  2026-03-15-resilient-pipeline-lifecycle.md  2026-03-15-task-pool-and-review-quality.md  2026-03-16-agent-quality-and-hitl-completion.md  2026-03-16-pipeline-tui-reliability.md  2026-03-22-forge-deep-audit-fixes.md  2026-03-28-super-repo-end-to-end-fix.md  2026-03-29-pipeline-reliability-fixes.md  2026-03-30-adaptive-review-scaling.md  2026-03-31-fix-ci-and-add-claude-autofix.md  2026-04-04-reliability-release-war-room.md  2026-04-05-multi-provider-architecture-implementation.md  phase-2-cli-and-config.md  phase-3-daemon-core.md  phase-4-planner.md  phase-5-review-and-merge.md  phase-6-pr-creation.md  phase-7-tui.md  phase-8-web-api.md  (+1 more)
forge/agents/: __init__.py  adapter.py  adapter_question_test.py  adapter_test.py  collaboration.py  collaboration_test.py  context_manager.py  runtime.py  runtime_test.py  tool_concurrency.py
forge/api/: __init__.py  app.py  app_test.py
forge/cli/: __init__.py  clean.py  clean_test.py  costs.py  costs_test.py  doctor.py  doctor_test.py  export.py  export_formatters.py  export_formatters_test.py  export_test.py  fix.py  fix_test.py  gauntlet.py  gauntlet_test.py  health.py  health_test.py  lessons.py  lessons_test.py  logs.py  logs_test.py  main.py  main_test.py  ping.py  ping_test.py  readiness.py  readiness_test.py  serve_test.py  stats.py  stats_test.py  status.py  status_test.py
forge/config/: __init__.py  project_config.py  project_config_test.py  settings.py  settings_test.py  user_settings.py  user_settings_test.py
forge/core/: __init__.py  async_utils.py  async_utils_test.py  blocked_reason.py  blocked_reason_test.py  budget.py  budget_test.py  ci_watcher.py  ci_watcher_test.py  claude_planner.py  claude_planner_test.py  context.py  context_test.py  continuity.py  continuity_test.py  contract_builder.py  contract_builder_test.py  contracts.py  contracts_test.py  conventions.py  conventions_test.py  cost_estimator.py  cost_estimator_test.py  cost_registry.py  cost_registry_test.py  cost_velocity.py  cost_velocity_test.py  daemon.py  daemon_autodetect_test.py  daemon_executor.py  daemon_executor_collab_test.py  daemon_executor_question_test.py  daemon_executor_test.py  daemon_helpers.py  daemon_helpers_test.py  daemon_merge.py  daemon_merge_test.py  daemon_metrics_test.py  daemon_pool_test.py  daemon_release_test.py  (+55 more)
forge/gauntlet/: __init__.py  fixtures.py  fixtures_test.py  mock_pipeline.py  mock_pipeline_test.py  models.py  models_test.py  report.py  report_test.py  runner.py  runner_test.py
forge/issue/: __init__.py  github.py  github_test.py  prompt.py  prompt_test.py
forge/learning/: __init__.py  analytics.py  analytics_test.py  extractor.py  extractor_test.py  guard.py  guard_test.py  integration_test.py  store.py  store_test.py  test_guard.py
forge/merge/: __init__.py  worker.py  worker_test.py  worktree.py  worktree_test.py
forge/providers/: __init__.py  _stream_text.py  base.py  base_test.py  catalog.py  catalog_test.py  claude.py  claude_test.py  openai.py  openai_test.py  readiness.py  readiness_test.py  registry.py  registry_test.py  restrictions.py  restrictions_test.py  safety_auditor.py  safety_auditor_test.py  status.py  status_test.py
forge/registry/: index.py  index_test.py
forge/review/: __init__.py  auto_check.py  auto_check_test.py  llm_review.py  llm_review_test.py  merge_check.py  pipeline.py  pipeline_test.py  standards.py  standards_test.py  strategy.py  strategy_test.py  synthesizer.py  synthesizer_test.py
forge/storage/: __init__.py  db.py  db_analytics_test.py  db_question_test.py  db_test.py  pipeline_db_test.py
forge/tests/: test_architect_parser.py  test_validator.py
forge/tui/: __init__.py  app.py  app_db_test.py  app_handlers_test.py  app_resume_test.py  app_test.py  bus.py  bus_client_test.py  bus_test.py  cli_test.py  dashboard.py  dashboard_test.py  integration_test.py  planner_progress_test.py  pr_creator.py  pr_creator_test.py  smart_launch_test.py  state.py  state_question_test.py  state_test.py  theme.py
forge/utils/: hello.py  hello_test.py  strings.py  strings_test.py
scripts/: smoke_test.sh
scripts/smoke-fixture/: README.md  calculator.py  pyproject.toml  test_calculator.py
web/: package-lock.json  package.json
(+214 files in other folders)
