[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-orchestrator"
version = "0.1.0"
description = "Hybrid multi-agent orchestration engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "psutil>=5.9",
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.50",
    "claude-code-sdk>=0.0.25",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "httpx>=0.27",
]
postgres = [
    "asyncpg>=0.29",
]
remote = [
    "asyncssh>=2.14",
]

[project.scripts]
forge = "forge.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["forge"]
python_files = ["*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
