[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-orchestrator"
version = "0.1.0"
description = "Hybrid multi-agent orchestration engine"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Tarun MS"}]
keywords = ["ai", "agents", "orchestration", "claude", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "psutil>=5.9",
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.50",
    "claude-code-sdk>=0.0.25",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/tarunms7/forge-orchestrator"
Repository = "https://github.com/tarunms7/forge-orchestrator"
Issues = "https://github.com/tarunms7/forge-orchestrator/issues"

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
postgres = [
    "asyncpg>=0.29",
]
remote = [
    "asyncssh>=2.14",
]

[project.scripts]
forge = "forge.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["forge"]
exclude = ["*_test.py", "**/*_test.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["forge"]
python_files = ["*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
