[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-orchestrator"
version = "0.1.0"
description = "Hybrid multi-agent orchestration engine"
requires-python = ">=3.12"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Tarun MS"}]
keywords = ["ai", "agents", "orchestration", "claude", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "psutil>=5.9",
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.50",
    "claude-code-sdk>=0.0.25",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/tarunms7/forge-orchestrator"
Repository = "https://github.com/tarunms7/forge-orchestrator"
Issues = "https://github.com/tarunms7/forge-orchestrator/issues"

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]
postgres = [
    "asyncpg>=0.29",
]
remote = [
    "asyncssh>=2.14",
]

[project.scripts]
forge = "forge.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["forge"]
exclude = ["*_test.py", "**/*_test.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["forge"]
python_files = ["*_test.py"]
timeout = 60

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long — prompt strings and multiline log messages exceed 100 chars by design
    "SIM105",  # use contextlib.suppress — would require rewriting 44 try/except blocks
    "SIM117",  # multiple-with-statements — combining with statements reduces readability in our patterns
    "SIM115",  # open-file-with-context-handler — false positives on our async file patterns
    "SIM108",  # if-else-block-instead-of-if-exp — ternaries reduce readability for multi-line conditions
    "SIM102",  # collapsible-if — nested ifs are often more readable than combined conditions
    "SIM103",  # needless-bool — return-condition-directly is a style preference
    "B904",    # raise-without-from-inside-except — bulk fix deferred to separate PR
    "UP042",   # replace-str-enum — StrEnum requires Python 3.11+ migration of Enum patterns
]

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["B017", "B008"]  # assert-raises-exception and function-call-in-default-argument ok in tests
